2011-06-23  Andy Buckley  <andy@insectnation.org>

	* Adding a tentative rivet-updateanalyses script, based on
	lhapdf-getdata, which will download new analyses as requested. We
	could change our analysis-providing behaviour a bit to allow this
	sort of delivery mechanism to be used as the normal way of getting
	analysis updates without us having to make a whole new Rivet
	release. It is nice to be able to identify analyses with releases,
	though, for tracking whether bugs have been addressed.

2011-06-10  Frank Siegert  <frank.siegert@cern.ch>

	* Bugfixes in WFinder.

2011-06-10  Andy Buckley  <andy@insectnation.org>

	* Adding \physicsxcoor and \physicsycoor treatment to make-plots.

2011-06-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Allow for negative cross-sections. NLO tools need this.

	* make-plots: For RatioPlotMode=deviation also consider the MC
	uncertainties, not just data.

2011-06-04  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Add support for goodness-of-fit calculations to make-plots.
	The results are shown in the legend, and one histogram can
	be selected to determine the color of the plot margin. See
	the documentation for more details.

2011-06-04  Andy Buckley  <andy@insectnation.org>

	* Adding auto conversion of Histogram2D to DataPointSets in the
	AnalysisHandler _normalizeTree method.

2011-06-03  Andy Buckley  <andy@insectnation.org>

	* Adding a file-weight feature to the Run object, which will
	optionally rescale the weights in the provided HepMC files. This
	should be useful for e.g. running on multiple differently-weighted
	AlpGen HepMC files/streams. The new functionality is used by the
	rivet command via an optional weight appended to the filename with
	a colon delimiter, e.g. "rivet fifo1.hepmc fifo2.hepmc:2.31"

2011-06-01  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Add BeamThrust projection

2011-05-31  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix LIBS for fastjet-3.0

	* Add basic infrastructure for Taylor plots in make-plots
